--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "webpack --env mode=production",
     "dev": "webpack --env mode=development",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "stylelint": "stylelint '**/*{.css,.scss}'",
+    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix"
   },
   "keywords": [],
   "author": "",
@@ -20,22 +22,29 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "esquery": "1.4.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.29",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.3",
+    "prettier": "3.0.3",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
