--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "unit": "jest --config ./config/jest/jest.config.ts",
     "prod": "webpack --env mode=production",
     "dev": "webpack --env mode=development",
     "start": "webpack serve",
@@ -15,7 +15,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
     "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.7",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -23,6 +27,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
@@ -35,6 +40,7 @@
     "esquery": "1.4.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.29",
     "postcss-loader": "^7.3.3",
