--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "unit": "jest --config ./config/jest/jest.config.ts",
     "prod": "webpack --env mode=production",
     "dev": "webpack --env mode=development",
-    "start": "webpack serve",
-    "stylelint": "stylelint '**/*{.css,.scss}'",
-    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -49,8 +47,6 @@
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard-scss": "^11.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
